# annotate-rs

./: Cargo.toml  LICENSE  README.md
annotate/: Cargo.toml
annotate-build/: Cargo.toml
annotate-build/src/: builder.rs  config.rs  environment.rs  function.rs  lib.rs  module.rs  parser.rs  path.rs  render.rs  visitor.rs
annotate-derive/: Cargo.toml
annotate-derive/src/: attributes.rs  function.rs  lib.rs  module.rs
annotate-examples/: Cargo.toml  build.rs
annotate-examples/src/: lib.rs
annotate-examples/tests/: annotations.rs
annotate/src/: attribute.rs  environment.rs  function.rs  global_environment.rs  lib.rs  module.rs  path.rs
annotate/src/internal/: environment.rs  function.rs  mod.rs  module.rs
