[package]
name = "annotate-derive"
version = "1.2.2"
edition = "2024"
description = "Procedural macros for the annotate annotation framework"
documentation = "https://docs.rs/annotate-derive"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
proc-macro2 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
